2018-12-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support vectors of conditions and expression in if()
	* Assume false if not true argument in if()

2018-12-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* raid() function for RAID capacity calculation

2018-12-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow "to"-conversion for variable without units

2018-12-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use prefixes with litre by defult

2018-12-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Reciprocal unit conversion (e.g. 5 m/s = 0.2 s/m, 60 mpg = 0.039 L/km)

2018-12-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix missing prefix for gram when exponent of gram is not one and automatic prefixes is off

2018-11-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	 * Fixes for units with non-linear relation
	 * Use single quotation marks for unknowns with one character

2018-11-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

 	* Improve line breaks
 	* UTF-8 algorithms tweaks

2018-11-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix handling of unicode chars for \a (="a") syntax
	* Only use italics for quoted single characters

2018-11-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve appearance of x*m/s and similar
	* Hectare/decare improvements

2018-11-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Proper line breaks in qalc
	* Fix (x+y)^a (was not expanded!)

2018-11-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Line count fixes

2018-11-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not transform rational numbers to integers in numerator and denominator
	  if the resulting integers is not displayed in exact format
	* Add set options shortcuts and add option descriptions to help set, in qalc
	* Set restrict_fraction_length to true for 'set fractions fraction' in qalc
	* Hectare and decare units (in addition to ha/da and hectoare/decaare)
